<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright 2024 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
  <string name="app_name" translatable="false">Offline AI chat</string>
  <string name="button_generate" translatable="false">Generate</string>
  <string name="button_cancel" translatable="false">Cancel</string>
  <string name="prompt_is_empty" translatable="false">Please enter an non empty prompt</string>
  <string name="empty" translatable="false"/>
  <string name="disclaimer_title">Important:</string>
  <string name="disclaimer_hallucination">Hallucinates a lot, due to small model size. That\'s the drawback for being usable without Internet.</string>
  <string name="disclaimer_conversation">Each question is considered as a new conversation.</string>
  <string name="menu_about" translatable="false">About</string>
  <string name="about_content" translatable="false">App source code is open: https://github.com/nicolas-raoul/offline-ai-chat\n\nPull requests very welcome!\n\nUses your device\'s embedded AICore model (presumably Gemini Nano).</string>
  <string name="aicore_setup_title">AICore setup required</string>
  <string name="checking_aicore">Checking AICore Beta...</string>
  <string name="aicore_setup_instructions">This application relies on AICore Beta, so let\'s install it first:\n
\n
1. Join the <a href="https://groups.google.com/g/aicore-experimental">aicore-experimental Google group</a>\n
\n
2. Opt in to the <a href="https://play.google.com/apps/testing/com.google.android.aicore">Android AICore testing program</a>\n
\n
3. Go for a walk. An hour later, in the Google Play store app, make sure you have \"Android AICore (Beta)\" installed. If the \"(Beta)\" suffix is not present, update your apps, reboot, and wait it a bit more.\n
\n
If you still get this screen, please file an issue on my <a href="https://github.com/nicolas-raoul/offline-ai-chat/issues">GitHub issue tracker</a>, ideally with devicean ADB logcat dump.\n
\n
Thank you for your patience!
</string>
  <string name="retry">Retry</string>
  <string name="input_message_label">Input Message</string>
  <string name="button_send">Send</string>
  <string name="config_label">Config</string>
  <string name="prefix_input_label">Prefix</string>
  <string name="generating">Generating...</string>
  <string name="input_message_is_empty">Input message is empty</string>
  <string name="warning_prefix_used_with_image">Warning: Prefix is used with image, which is not supported. Prefix will be ignored.</string>
  <string name="menu_open_prompt">Open Prompt</string>
</resources>
