<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".kotlin.OpenPromptActivity">

    <EditText
        android:id="@+id/request_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_message_label"
        android:inputType="text" />

    <Button
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send" />

    <ImageButton
        android:id="@+id/select_image_prompt_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_gallery" />

    <ImageView
        android:id="@+id/image_thumbnail_preview_input"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:visibility="gone" />

    <Button
        android:id="@+id/config_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/config_label" />

    <EditText
        android:id="@+id/prefix_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prefix_input_label"
        android:inputType="text" />

</LinearLayout>
