<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright 2024 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="56dp"
    android:paddingBottom="16dp">

  <LinearLayout
      android:id="@+id/disclaimer_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:orientation="vertical"
      android:background="#FFF9C4"
      android:padding="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/disclaimer_title"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/disclaimer_hallucination" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/disclaimer_conversation" />

  </LinearLayout>

  <LinearLayout
      android:id="@+id/input_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:orientation="horizontal"
      android:padding="4dp">

    <EditText
        android:id="@+id/request_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:maxLines="4"
        android:scrollbars="vertical"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_generate" />

  </LinearLayout>

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/content_recycler_view"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_below="@id/disclaimer_layout"
      android:layout_above="@id/input_layout"
      android:layout_margin="4dp" />

</RelativeLayout>